Add arrow characters to main fonts
Replace instances of > etc. used as arrow with proper → etc. characters

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -312,7 +312,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Ambyu-Lance gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie lies about her health!</d-text>
 	</d-box>
@@ -329,7 +329,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Ambyu-Lance gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei washes his hands!</d-text>
 	</d-box>
