--- a/encounters/maus.html
+++ b/encounters/maus.html
@@ -394,7 +394,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Maus gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle. (The <a href="#raction-ft1">first use of R-Action</a> is an exception; when that's used, S-Action uses standard flavor text.)</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle. (The <a href="#raction-ft1">first use of R-Action</a> is an exception; when that's used, S-Action uses standard flavor text.)</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie chased on all fours!!</d-text>
 	</d-box>
@@ -431,7 +431,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Maus gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h5>Shortened version</h5>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei sang a mouse song!</d-text>
 	</d-box>
