--- a/encounters/tasque.html
+++ b/encounters/tasque.html
@@ -219,7 +219,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text asterisk>You pet Tasque. It liked that.</d-text>
 	</d-box>
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris > Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris → Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You pet Tasque!</d-text>
 	</d-box>
@@ -301,7 +301,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text asterisk>Susie yelled at Tasque to get off her lawn.</d-text>
 	</d-box>
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris > Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris → Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie roared like a lion!</d-text>
 	</d-box>
@@ -317,7 +317,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text asterisk>Ralsei cooed gently at Tasque!</d-text>
 	</d-box>
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris > Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris → Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei blinks at Tasque!</d-text>
 	</d-box>
@@ -333,7 +333,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text asterisk>Noelle got rubbed on by Tasque!</d-text>
 	</d-box>
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris > Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as other ACTs. Displayed in a single dialogue box with the other ACTs' flavor text, in the order Kris → Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Tasque showed its belly to Noelle!</d-text>
 	</d-box>
