--- a/encounters/virovirokun.html
+++ b/encounters/virovirokun.html
@@ -447,7 +447,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Virovirokun gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie encouraged evil!</d-text>
 	</d-box>
@@ -473,7 +473,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Virovirokun gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie > Ralsei > Noelle.</p>
+	<p>Overrides the standard flavor text when used in the same turn as another X-Action. Displayed in a single dialogue box with the other X-Actions' flavor text, in the order Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei tried to rehabilitate!</d-text>
 	</d-box>
@@ -491,7 +491,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">Virovirokun gains 50% <span class="yellow">Mercy</span>.</p>
 
 	<h4>Shortened version</h4>
-	<p>Unused, as Kris has no shortened ACT flavor text. Would have overriden the standard flavor text when used in the same turn as another X-Action. Would have been displayed in a single dialogue box with the other X-Actions' flavor text, in the order Kris > Susie > Ralsei > Noelle.</p>
+	<p>Unused, as Kris has no shortened ACT flavor text. Would have overriden the standard flavor text when used in the same turn as another X-Action. Would have been displayed in a single dialogue box with the other X-Actions' flavor text, in the order Kris → Susie → Ralsei → Noelle.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Noelle tried her best!</d-text>
 	</d-box>
