Document Ch3 Sword Route
Including all three boards and the Shadow Mantle holder encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -132,6 +132,16 @@ items:
                 url: spamtonneoweird
                 name: Weird Route
   -
+    id: chapter3
+    name: Chapter 3
+    sublist:
+      -
+        name: Green Room
+        sublist:
+          -
+            url: shadowmantleholder
+            name: Shadow Mantle holder
+  -
     id: other
     name: Other
     sublist:
