Weapons/Armor: Add in-game names
Also simplified the comments with their respective IDs now that there's not two sets of IDs on the same page

--- a/misc/armor.html
+++ b/misc/armor.html
@@ -163,7 +163,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p class="note">Susie's armor is not removed.</p>
 </section>
 
-<section class="d-section" id="ambercard"> <!-- armor id 1 -->
+<section class="d-section" id="ambercard"> <!-- id 1 -->
 	<h2>Amber Card</h2>
 
 	<h3 id="ambercard-description">Description</h3>
@@ -194,7 +194,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="dicebrace"> <!-- armor id 2 -->
+<section class="d-section" id="dicebrace"> <!-- id 2 -->
 	<h2>Dice Brace</h2>
 
 	<h3 id="dicebrace-description">Description</h3>
@@ -225,7 +225,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="pinkribbon"> <!-- armor id 3 -->
+<section class="d-section" id="pinkribbon"> <!-- id 3 -->
 	<h2>Pink Ribbon</h2>
 
 	<h3 id="pinkribbon-description">Description</h3>
@@ -278,7 +278,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="whiteribbon"> <!-- armor id 4 -->
+<section class="d-section" id="whiteribbon"> <!-- id 4 -->
 	<h2>White Ribbon</h2>
 
 	<h3 id="whiteribbon-description">Description</h3>
@@ -325,8 +325,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="ironshackle"> <!-- armor id 5 -->
+<section class="d-section" id="ironshackle"> <!-- id 5 -->
 	<h2>Iron Shackle</h2>
+	<p>Appears as "IronShackle" in-game.</p>
 
 	<h3 id="ironshackle-description">Description</h3>
 	<d-box theme="objmenu">
@@ -356,8 +357,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="mousetoken"> <!-- armor id 6 -->
+<section class="d-section" id="mousetoken"> <!-- id 6 -->
 	<h2>Mouse Token</h2>
+	<p>Appears as "MouseToken" in-game.</p>
 	<p>Unused item that's not available in the playable game, but included for completion.</p>
 
 	<hr>
@@ -396,7 +398,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="jevilstail"> <!-- armor id 7 -->
+<section class="d-section" id="jevilstail"> <!-- id 7 -->
 	<h2>Jevilstail</h2>
 
 	<h3 id="jevilstail-description">Description</h3>
@@ -427,7 +429,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="silvercard"> <!-- armor id 8 -->
+<section class="d-section" id="silvercard"> <!-- id 8 -->
 	<h2>Silver Card</h2>
 
 	<h3 id="silvercard-description">Description</h3>
@@ -458,8 +460,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="twinribbon"> <!-- armor id 9 -->
+<section class="d-section" id="twinribbon"> <!-- id 9 -->
 	<h2>Twin Ribbon</h2>
+	<p>Appears as "TwinRibbon" in-game.</p>
 
 	<h3 id="twinribbon-description">Description</h3>
 	<d-box theme="objmenu">
@@ -491,8 +494,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="glowwrist"> <!-- armor id 10 -->
+<section class="d-section" id="glowwrist"> <!-- id 10 -->
 	<h2>Glow Wrist</h2>
+	<p>Appears as "GlowWrist" in-game.</p>
 
 	<h3 id="glowwrist-description">Description</h3>
 	<d-box theme="objmenu">
@@ -522,8 +526,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="chainmail"> <!-- armor id 11 -->
+<section class="d-section" id="chainmail"> <!-- id 11 -->
 	<h2>Chain Mail</h2>
+	<p>Appears as "ChainMail" in-game.</p>
 
 	<h3 id="chainmail-description">Description</h3>
 	<d-box theme="objmenu">
@@ -553,8 +558,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="bshotbowtie"> <!-- armor id 12 -->
+<section class="d-section" id="bshotbowtie"> <!-- id 12 -->
 	<h2>B. Shot Bowtie</h2>
+	<p>Appears as "B.ShotBowtie" in-game.</p>
 
 	<h3 id="bshotbowtie-description">Description</h3>
 	<d-box theme="objmenu">
@@ -584,8 +590,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="spikeband"> <!-- armor id 13 -->
+<section class="d-section" id="spikeband"> <!-- id 13 -->
 	<h2>Spike Band</h2>
+	<p>Appears as "SpikeBand" in-game.</p>
 
 	<h3 id="spikeband-description">Description</h3>
 	<d-box theme="objmenu">
@@ -616,7 +623,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="silverwatch"> <!-- armor id 14 -->
+<section class="d-section" id="silverwatch"> <!-- id 14 -->
 	<h2>Silver Watch</h2>
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#wristwatch' | relative_url }}">Wristwatch</a>.</p>
 
@@ -650,8 +657,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="tensionbow"> <!-- armor id 15 -->
+<section class="d-section" id="tensionbow"> <!-- id 15 -->
 	<h2>Tension Bow</h2>
+	<p>Appears as "TensionBow" in-game.</p>
 
 	<h3 id="tensionbow-description">Description</h3>
 	<d-box theme="objmenu">
@@ -664,7 +672,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>No one reacts to this being equipped.</p>
 </section>
 
-<section class="d-section" id="mannequin"> <!-- armor id 16 -->
+<section class="d-section" id="mannequin"> <!-- id 16 -->
 	<h2>Mannequin</h2>
 	<p>This can only be equipped by Kris.</p>
 
@@ -698,8 +706,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="darkgoldband"> <!-- armor id 17 -->
+<section class="d-section" id="darkgoldband"> <!-- id 17 -->
 	<h2>Dark Gold Band</h2>
+	<p>Appears as "DarkGoldBand" in-game.</p>
 	<p>Unused. Some of its data appears to be copied over from the Mannequin; party reactions are identical to the Mannequin's, as is the fact that this can only be equipped by Kris.</p>
 
 	<hr>
@@ -732,8 +741,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="skymantle"> <!-- armor id 18 -->
+<section class="d-section" id="skymantle"> <!-- id 18 -->
 	<h2>Sky Mantle</h2>
+	<p>Appears as "SkyMantle" in-game.</p>
 	<p>Unused, but included for completion.</p>
 
 	<hr>
@@ -750,8 +760,9 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>No one reacts to this being equipped.</p>
 </section>
 
-<section class="d-section" id="spikeshackle"> <!-- armor id 19 -->
+<section class="d-section" id="spikeshackle"> <!-- id 19 -->
 	<h2>Spike Shackle</h2>
+	<p>Appears as "SpikeShackle" in-game.</p>
 	<p>Unused, but included for completion.</p>
 
 	<hr>
@@ -782,8 +793,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="frayedbowtie"> <!-- armor id 20 -->
+<section class="d-section" id="frayedbowtie"> <!-- id 20 -->
 	<h2>Frayed Bowtie</h2>
+	<p>Appears as "FrayedBowtie" in-game.</p>
 
 	<h3 id="frayedbowtie-description">Description</h3>
 	<d-box theme="objmenu">
@@ -815,7 +827,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="dealmaker"> <!-- armor id 21 -->
+<section class="d-section" id="dealmaker"> <!-- id 21 -->
 	<h2>Dealmaker</h2>
 
 	<h3 id="dealmaker-description">Description</h3>
@@ -847,8 +859,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="royalpin"> <!-- armor id 22 -->
+<section class="d-section" id="royalpin"> <!-- id 22 -->
 	<h2>Royal Pin</h2>
+	<p>Appears as "RoyalPin" in-game.</p>
 
 	<h3 id="royalpin-description">Description</h3>
 	<d-box theme="objmenu">
@@ -879,8 +892,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="shadowmantle"> <!-- armor id 23 -->
+<section class="d-section" id="shadowmantle"> <!-- id 23 -->
 	<h2>Shadow Mantle</h2>
+	<p>Appears as "ShadowMantle" in-game.</p>
 
 	<h3 id="shadowmantle-description">Description</h3>
 	<d-box theme="objmenu">
@@ -913,8 +927,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="lodestone"> <!-- armor id 24 -->
+<section class="d-section" id="lodestone"> <!-- id 24 -->
 	<h2>Lode Stone</h2>
+	<p>Appears as "LodeStone" in-game.</p>
 
 	<h3 id="lodestone-description">Description</h3>
 	<d-box theme="objmenu">
@@ -996,8 +1011,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="gingerguard"> <!-- armor id 25 -->
+<section class="d-section" id="gingerguard"> <!-- id 25 -->
 	<h2>Ginger Guard</h2>
+	<p>Appears as "GingerGuard" in-game.</p>
 
 	<h3 id="gingerguard-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1028,8 +1044,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="blueribbon"> <!-- armor id 26 -->
+<section class="d-section" id="blueribbon"> <!-- id 26 -->
 	<h2>Blue Ribbon</h2>
+	<p>Appears as "BlueRibbon" in-game.</p>
 
 	<h3 id="blueribbon-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1137,8 +1154,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="tennatie"> <!-- armor id 27 -->
+<section class="d-section" id="tennatie"> <!-- id 27 -->
 	<h2>Tenna Tie</h2>
+	<p>Appears as "TennaTie" in-game.</p>
 
 	<h3 id="tennatie-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1169,7 +1187,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="waferguard"> <!-- armor id 50 -->
+<section class="d-section" id="waferguard"> <!-- id 50 -->
 	<h2>Waferguard</h2>
 
 	<h3 id="waferguard-description">Description</h3>
@@ -1204,8 +1222,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="mysticband"> <!-- armor id 51 -->
+<section class="d-section" id="mysticband"> <!-- id 51 -->
 	<h2>Mystic Band</h2>
+	<p>Appears as "MysticBand" in-game.</p>
 
 	<h3 id="mysticband-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1236,8 +1255,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="powerband"> <!-- armor id 52 -->
+<section class="d-section" id="powerband"> <!-- id 52 -->
 	<h2>Power Band</h2>
+	<p>Appears as "PowerBand" in-game.</p>
 
 	<h3 id="powerband-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1268,8 +1288,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="princessribbon"> <!-- armor id 53 -->
+<section class="d-section" id="princessribbon"> <!-- id 53 -->
 	<h2>Princess Ribbon</h2>
+	<p>Appears as "PrincessRBN" in-game.</p>
 
 	<h3 id="princessribbon-description">Description</h3>
 	<d-box theme="objmenu">
@@ -1301,8 +1322,9 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-<section class="d-section" id="goldwidow"> <!-- armor id 54 -->
+<section class="d-section" id="goldwidow"> <!-- id 54 -->
 	<h2>Gold Widow</h2>
+	<p>Appears as "GoldWidow" in-game.</p>
 
 	<h3 id="goldwidow-description">Description</h3>
 	<d-box theme="objmenu">
