--- a/misc/weapons.html
+++ b/misc/weapons.html
@@ -154,7 +154,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Kris's swords</h2>
 	<p>The swords listed in this section can only be equipped by Kris. See <a href="#other">Other weapons</a> for swords that can be equipped by others.</p>
 
-	<h3 id="woodblade">Wood Blade</h3> <!-- weapon id 1 -->
+	<h3 id="woodblade">Wood Blade</h3> <!-- id 1 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#pencil' | relative_url }}">Pencil</a>.</p>
 
 	<h4 id="woodblade-description">Description</h4>
@@ -194,7 +194,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="spookysword">Spookysword</h3> <!-- weapon id 5 -->
+	<h3 id="spookysword">Spookysword</h3> <!-- id 5 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#halloweenpencil' | relative_url }}">Halloween Pencil</a>.</p>
 
 	<h4 id="spookysword-description">Description</h4>
@@ -226,7 +226,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="trefoil">Trefoil</h3> <!-- weapon id 8 -->
+	<h3 id="trefoil">Trefoil</h3> <!-- id 8 -->
 	<p>Unused item that's not available in the playable game, but included for completion. Dark World equivalent of the <a href="{{ '/misc/lightitems#luckypencil' | relative_url }}">Lucky Pencil</a>.</p>
 
 	<h4 id="trefoil-description">Description</h4>
@@ -259,7 +259,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="twistedsword">Twisted Sword</h3> <!-- weapon id 11 -->
+	<h3 id="twistedsword">Twisted Sword</h3> <!-- id 11 -->
+	<p>Appears as "TwistedSwd" in-game.</p>
 
 	<h4 id="twistedsword-description">Description</h4>
 	<d-box theme="objmenu">
@@ -290,8 +291,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="bounceblade">Bounce Blade</h3> <!-- weapon id 14 -->
-	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#eraser' | relative_url }}">Eraser</a>.</p>
+	<h3 id="bounceblade">Bounce Blade</h3> <!-- id 14 -->
+	<p>Appears as "BounceBlade" in-game. Dark World equivalent of the <a href="{{ '/misc/lightitems#eraser' | relative_url }}">Eraser</a>.</p>
 
 	<h4 id="bounceblade-description">Description</h4>
 	<d-box theme="objmenu">
@@ -323,8 +324,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="mechasaber">Mecha Saber</h3> <!-- weapon id 16 -->
-	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#mechanicalpencil' | relative_url }}">Mechanical Pencil</a>.</p>
+	<h3 id="mechasaber">Mecha Saber</h3> <!-- id 16 -->
+	<p>Appears as "MechaSaber" in-game. Dark World equivalent of the <a href="{{ '/misc/lightitems#mechanicalpencil' | relative_url }}">Mechanical Pencil</a>.</p>
 
 	<h4 id="mechasaber-description">Description</h4>
 	<d-box theme="objmenu">
@@ -356,8 +357,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="saber10">Saber 10</h3> <!-- weapon id 23 -->
-	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#cactusneedle' | relative_url }}">Cactus Needle</a>.</p>
+	<h3 id="saber10">Saber 10</h3> <!-- id 23 -->
+	<p>Appears as "Saber10" in-game. Dark World equivalent of the <a href="{{ '/misc/lightitems#cactusneedle' | relative_url }}">Cactus Needle</a>.</p>
 
 	<h4 id="saber10-description">Description</h4>
 	<d-box theme="objmenu">
@@ -389,7 +390,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="winglade">Winglade</h3> <!-- weapon id 53 -->
+	<h3 id="winglade">Winglade</h3> <!-- id 53 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#quillpen' | relative_url }}">Quill Pen</a>.</p>
 
 	<h4 id="winglade-description">Description</h4>
@@ -423,7 +424,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Susie's axes</h2>
 	<p>The axes listed in this section can only be equipped by Susie.</p>
 
-	<h3 id="maneax">Mane Ax</h3> <!-- weapon id 2 -->
+	<h3 id="maneax">Mane Ax</h3> <!-- id 2 -->
 
 	<h4 id="maneax-description">Description</h4>
 	<d-box theme="objmenu">
@@ -454,7 +455,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="braveax">Brave Ax</h3> <!-- weapon id 6 -->
+	<h3 id="braveax">Brave Ax</h3> <!-- id 6 -->
 
 	<h4 id="braveax-description">Description</h4>
 	<d-box theme="objmenu">
@@ -486,7 +487,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="devilsknife">Devilsknife</h3> <!-- weapon id 7 -->
+	<h3 id="devilsknife">Devilsknife</h3> <!-- id 7 -->
 
 	<h4 id="devilsknife-description">Description</h4>
 	<d-box theme="objmenu">
@@ -518,7 +519,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="autoaxe">Auto Axe</h3> <!-- weapon id 17 -->
+	<h3 id="autoaxe">Auto Axe</h3> <!-- id 17 -->
+	<p>Appears as "AutoAxe" in-game.</p>
 
 	<h4 id="autoaxe-description">Description</h4>
 	<d-box theme="objmenu">
@@ -549,7 +551,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="toxicaxe">Toxic Axe</h3> <!-- weapon id 24 -->
+	<h3 id="toxicaxe">Toxic Axe</h3> <!-- id 24 -->
+	<p>Appears as "ToxicAxe" in-game.</p>
 
 	<h4 id="toxicaxe-description">Description</h4>
 	<d-box theme="objmenu">
@@ -580,7 +583,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="justiceaxe">Justice Axe</h3> <!-- weapon id 52 -->
+	<h3 id="justiceaxe">Justice Axe</h3> <!-- id 52 -->
+	<p>Appears as "JusticeAxe" in-game.</p>
 
 	<h4 id="justiceaxe-description">Description</h4>
 	<d-box theme="objmenu">
@@ -611,7 +615,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="absorbax">Absorb Ax</h3> <!-- weapon id 54 -->
+	<h3 id="absorbax">Absorb Ax</h3> <!-- id 54 -->
+	<p>Appears as "AbsorbAx" in-game.</p>
 
 	<h4 id="absorbax-description">Description</h4>
 	<d-box theme="objmenu">
@@ -644,7 +649,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Ralsei's scarves</h2>
 	<p>The scarves listed in this section can only be equipped by Ralsei.</p>
 
-	<h3 id="redscarf">Red Scarf</h3> <!-- weapon id 3 -->
+	<h3 id="redscarf">Red Scarf</h3> <!-- id 3 -->
 
 	<h4 id="redscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -675,7 +680,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="ragger">Ragger</h3> <!-- weapon id 9 -->
+	<h3 id="ragger">Ragger</h3> <!-- id 9 -->
 
 	<h4 id="ragger-description">Description</h4>
 	<d-box theme="objmenu">
@@ -706,7 +711,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="daintyscarf">Dainty Scarf</h3> <!-- weapon id 10 -->
+	<h3 id="daintyscarf">Dainty Scarf</h3> <!-- id 10 -->
+	<p>Appears as "DaintyScarf" in-game.</p>
 
 	<h4 id="daintyscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -737,7 +743,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="cheerscarf">Cheer Scarf</h3> <!-- weapon id 15 -->
+	<h3 id="cheerscarf">Cheer Scarf</h3> <!-- id 15 -->
+	<p>Appears as "CheerScarf" in-game.</p>
 
 	<h4 id="cheerscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -768,7 +775,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="fiberscarf">Fiber Scarf</h3> <!-- weapon id 18 -->
+	<h3 id="fiberscarf">Fiber Scarf</h3> <!-- id 18 -->
+	<p>Appears as "FiberScarf" in-game.</p>
 
 	<h4 id="fiberscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -800,7 +808,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="ragger2">Ragger 2</h3> <!-- weapon id 19 -->
+	<h3 id="ragger2">Ragger 2</h3> <!-- id 19 -->
+	<p>Appears as "Ragger2" in-game.</p>
 
 	<h4 id="ragger2-description">Description</h4>
 	<d-box theme="objmenu">
@@ -832,7 +841,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="puppetscarf">Puppet Scarf</h3> <!-- weapon id 21 -->
+	<h3 id="puppetscarf">Puppet Scarf</h3> <!-- id 21 -->
+	<p>Appears as "PuppetScarf" in-game.</p>
 
 	<h4 id="puppetscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -864,7 +874,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="flexscarf">Flex Scarf</h3> <!-- weapon id 25 -->
+	<h3 id="flexscarf">Flex Scarf</h3> <!-- id 25 -->
+	<p>Appears as "FlexScarf" in-game.</p>
 
 	<h4 id="flexscarf-description">Description</h4>
 	<d-box theme="objmenu">
@@ -895,7 +906,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="scarfmark">Scarf Mark</h3> <!-- weapon id 51 -->
+	<h3 id="scarfmark">Scarf Mark</h3> <!-- id 51 -->
+	<p>Appears as "ScarfMark" in-game.</p>
 
 	<h4 id="scarfmark-description">Description</h4>
 	<d-box theme="objmenu">
@@ -931,7 +943,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Noelle's rings</h2>
 	<p>The rings listed in this section can only be equipped by Noelle.</p>
 
-	<h3 id="snowring">Snow Ring</h3> <!-- weapon id 12 -->
+	<h3 id="snowring">Snow Ring</h3> <!-- id 12 -->
+	<p>Appears as "SnowRing" in-game.</p>
 
 	<h4 id="snowring-description">Description</h4>
 	<d-box theme="objmenu">
@@ -962,7 +975,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="thornring">Thorn Ring</h3> <!-- weapon id 13 -->
+	<h3 id="thornring">Thorn Ring</h3> <!-- id 13 -->
+	<p>Appears as "ThornRing" in-game.</p>
 
 	<h4 id="thornring-description">Description</h4>
 	<d-box theme="objmenu">
@@ -991,7 +1005,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="freezering">Freeze Ring</h3> <!-- weapon id 22 -->
+	<h3 id="freezering">Freeze Ring</h3> <!-- id 22 -->
+	<p>Appears as "FreezeRing" in-game.</p>
 
 	<h4 id="freezering-description">Description</h4>
 	<d-box theme="objmenu">
@@ -1024,8 +1039,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Other weapons</h2>
 	<p>Equippable by multiple or no party members.</p>
 
-	<h3 id="everybodyweapon">Everybody Weapon</h3> <!-- weapon id 4 -->
-	<p>Unused. Equippable by Kris, Susie, Ralsei, and Noelle.</p>
+	<h3 id="everybodyweapon">Everybody Weapon</h3> <!-- id 4 -->
+	<p>Unused. Appears as "EverybodyWeapon" in-game. Equippable by Kris, Susie, Ralsei, and Noelle.</p>
 
 	<h4 id="everybodyweapon-description">Description</h4>
 	<d-box theme="objmenu">
@@ -1056,8 +1071,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="brokensword">Broken Sword</h3> <!-- weapon id 20 -->
-	<p>Cannot be equipped by any party member.</p>
+	<h3 id="brokensword">Broken Sword</h3> <!-- id 20 -->
+	<p>Appears as "BrokenSwd" in-game. Cannot be equipped by any party member.</p>
 
 	<h4 id="brokensword-description">Description</h4>
 	<d-box theme="objmenu">
@@ -1089,8 +1104,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="blackshard">Black Shard</h3> <!-- weapon id 26 -->
-	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#blackshard' | relative_url }}">Black Shard (Light World)</a>.</p>
+	<h3 id="blackshard">Black Shard</h3> <!-- id 26 -->
+	<p>Appears as "BlackShard" in-game. Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#blackshard' | relative_url }}">Black Shard (Light World)</a>.</p>
 
 	<h4 id="blackshard-description">Description</h4>
 	<d-box theme="objmenu">
@@ -1119,8 +1134,8 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="jingleblade">Jingle Blade</h3> <!-- weapon id 50 -->
-	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#holidaypencil' | relative_url }}">Holiday Pencil</a>.</p>
+	<h3 id="jingleblade">Jingle Blade</h3> <!-- id 50 -->
+	<p>Appears as "JingleBlade" in-game. Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#holidaypencil' | relative_url }}">Holiday Pencil</a>.</p>
 
 	<h4 id="jingleblade-description">Description</h4>
 	<d-box theme="objmenu">
