Cell phone: Improve Home section IDs

--- a/misc/cellphone.html
+++ b/misc/cellphone.html
@@ -154,9 +154,9 @@ toc:
 
 	<hr>
 
-	<h3 id="chapter1">Chapter 1</h3>
+	<h3 id="home-chapter1">Chapter 1</h3>
 	<p>After leaving the Card Kingdom, at which point school is over for the day.</p>
-	<h4 id="chapter1-1">First time</h4>
+	<h4 id="home-chapter1-1">First time</h4>
 	<p>Also plays when leaving the school, if you haven't already called Toriel.</p>
 	<d-box theme="light">
 		<d-text asterisk>(Ring, ring...)</d-text>
@@ -229,7 +229,7 @@ toc:
 		<d-text asterisk>(Click...)</d-text>
 	</d-box>
 
-	<h4 id="chapter1-2">Second time</h4>
+	<h4 id="home-chapter1-2">Second time</h4>
 	<d-box theme="light">
 		<d-text asterisk>(Ring, ring...)</d-text>
 	</d-box>
@@ -253,7 +253,7 @@ toc:
 		<d-text asterisk>(Click...)</d-text>
 	</d-box>
 
-	<h4 id="chapter1-3">Subsequent times</h4>
+	<h4 id="home-chapter1-3">Subsequent times</h4>
 	<d-box theme="light">
 		<d-text asterisk>(Ring, ring...)</d-text>
 	</d-box>
@@ -275,7 +275,7 @@ toc:
 
 	<hr>
 
-	<h3 id="chapter2">Chapter 2</h3>
+	<h3 id="home-chapter2">Chapter 2</h3>
 	<h4>In the school hallways, after obtaining the trash orb</h4>
 	<p class="note">At this point only, the number is labelled <span class="white">Call Toriel</span> instead of <span class="white">Call Home</span>.</p>
 	<h5>First time</h5>
