Document Ch2 Berdly second encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -115,6 +115,15 @@ items:
           -
             url: ambyulance
             name: Ambyu-Lance
+          -
+            name: Berdly (second encounter, in alleyway)
+            sublist:
+              -
+                url: berdlycybercity
+                name: Normal route
+              -
+                url: berdlycybercityweird
+                name: Weird Route
       -
         name: Queen's Mansion
         sublist:
