Berdly encounter 1: Fix attack dialogue occurrence note

--- a/encounters/berdlycyberfield.html
+++ b/encounters/berdlycyberfield.html
@@ -180,7 +180,7 @@ toc:
 	<hr>
 
 	<h3 id="dialogue-attack">With specific attacks</h3>
-	<p>These dialogues play only the first time each attack is used from turn 6 onwards. See the <a href="{% include wikilink page='Berdly#Attacks' %}">Deltarune Wiki</a> for descriptions of each attack.</p>
+	<p>These dialogues play from turn 6 onwards. See the <a href="{% include wikilink page='Berdly#Attacks' %}">Deltarune Wiki</a> for descriptions of each attack.</p>
 
 	<h4>Tornado</h4>
 	<d-box theme="battletalk">
