Save points: Add HRs to switch case

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -690,10 +690,12 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 	<d-box theme="dark">
 		<d-text asterisk>(You are filled with the power of a crowd cheering for noone.)</d-text>
 	</d-box>
+	<hr class="hr3">
 	<h5>v0.0.089 onwards</h5>
 	<d-box theme="dark">
 		<d-text asterisk>(You are filled with the power of a crowd cheering for no one.)</d-text>
 	</d-box>
+	<hr class="hr2">
 
 	<!-- XFF -->
 	<h4>If Shadowguy and 4 or more other TV World Darkners have been LOST</h4>
