Document Tasque Manager encounter (regular/dojo)

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -127,7 +127,11 @@ items:
       -
         name: Queen's Mansion
         sublist:
-          # Swatchling, Tasque Manager, Mauswheel, Werewerewire, Spamton NEO, Queen, GIGA Queen
+          # Swatchling
+          -
+            url: tasquemanager
+            name: Tasque Manager
+          # Mauswheel, Werewerewire, Spamton NEO, Queen, GIGA Queen
           -
             url: pipis
             name: Pipis
@@ -160,6 +164,9 @@ items:
           -
             url: cloverdojo
             name: Clover Rematch
+          -
+            url: tasquemanagerdojo
+            name: Tasque Manager Says
       -
         name: Unused
         sublist:
