Standardize money gain/loss notes

--- a/encounters/spamton.html
+++ b/encounters/spamton.html
@@ -288,7 +288,7 @@ toc:
 			<d-text asterisk>(You felt your KROMER being absorbed...)</d-text>
 			<d-text asterisk>(Wrong choice...?)</d-text>
 		</d-box>
-		<p class="note">If you have $25 or more, you lose $25.</p>
+		<p class="note">If you have $25 or more, then $25 is deducted from your total money.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">Correct answer. Spamton gains 20% <span class="yellow">Mercy</span>.</p>
@@ -424,7 +424,7 @@ toc:
 			<d-text asterisk>(You felt your KROMER being absorbed...)</d-text>
 			<d-text asterisk>(Wrong choice...?)</d-text>
 		</d-box>
-		<p class="note">If you have $25 or more, you lose $25.</p>
+		<p class="note">If you have $25 or more, then $25 is deducted from your total money.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">Correct answer. Spamton gains 20% <span class="yellow">Mercy</span>.</p>
@@ -484,7 +484,7 @@ toc:
 			<d-text asterisk>(You felt your KROMER being absorbed...)</d-text>
 			<d-text asterisk>(Wrong choice...?)</d-text>
 		</d-box>
-		<p class="note">If you have $25 or more, you lose $25.</p>
+		<p class="note">If you have $25 or more, then $25 is deducted from your total money.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">Correct answer. Spamton gains 19% <span class="yellow">Mercy</span>.</p>
