--- a/locations/lightworld/dreemurrresidence/krisroom.html
+++ b/locations/lightworld/dreemurrresidence/krisroom.html
@@ -301,7 +301,7 @@ toc:
 		<d-box theme="light">
 			<d-text asterisk>You reluctantly "borrowed" 5 dollars.</d-text>
 		</d-box>
-		<p class="note">Kris gains $5.</p>
+		<p class="note">$5 is added to your total money.</p>
 		<h5>Chapter 4, when Susie is present</h5>
 		<h6>After QC says you don't have enough money for a hot chocolate</h6>
 		<d-box theme="light">
